--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,15 @@
 .img-list {
   display: flex;
 }
+
+#validation-input {
+  border: 3px solid #bdbdbd;
+}
+
+#validation-input.valid {
+  border-color: #4caf50;
+}
+
+#validation-input.invalid {
+  border-color: #f44336;
+}
